# fatura-parser

./: .gitignore  README.md  pyproject.toml  pytest.ini
fatura_parser/: __init__.py  batch.py  cli.py  core.py
fatura_parser/parsers/: __init__.py  itau.py
tests/: conftest.py  test_all_faturas.py  test_cli.py  test_core.py  test_itau_parser.py
tests/fixtures/: .gitkeep  sample_fatura.csv  sample_fatura_parsed.json
tests/fixtures/faturas/: 08-2025_parsed.json  10-2024_parsed.json  10-2025_parsed.json
