[project]
name = "fatura-parser"
version = "0.1.0"
description = "CLI tool to parse Brazilian credit card faturas (CSV/PDF) into structured formats"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
fatura-parser = "fatura_parser.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
